--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,14 @@
-# Your requirements go here
+asgiref==3.5.2
+backports.zoneinfo==0.2.1
+click==8.1.3
+cloudinary==1.30.0
+dj-database-url==1.0.0
+dj3-cloudinary-storage==0.0.6
+Django==3.2.16
+Flask==2.2.2
+gunicorn==20.1.0
+itsdangerous==2.1.2
+psycopg2==2.9.5
+pytz==2022.6
+sqlparse==0.4.3
+Werkzeug==2.2.2
