setting up the urls and views

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ cloudinary==1.30.0
 dj-database-url==1.0.0
 dj3-cloudinary-storage==0.0.6
 Django==3.2.16
+django-summernote==0.8.20.0
 Flask==2.2.2
 gunicorn==20.1.0
 itsdangerous==2.1.2
